fix z-index move to motion-drawer.module

--- a/src/DialogWrapper/dialog-wrapper.module.scss
+++ b/src/DialogWrapper/dialog-wrapper.module.scss
@@ -7,7 +7,6 @@
 }
 
 .dialog-wrapper{
-  --default-portal-index: 905;
   --default-success-color: #07bc0c;
   --default-warning-color: #f1c40f;
   --default-danger-color: #e74c3c;
@@ -22,7 +21,6 @@
   --dialog-wrapper-bg-color: #fff;
   --dialog-wrapper-color: #000;
 
-  z-index: var(--dialog-portal-index, var(--default-portal-index));
 
   display: flex;
   flex-direction: column;
