--- a/src/MotionDrawer/motion-drawer.module.scss
+++ b/src/MotionDrawer/motion-drawer.module.scss
@@ -1,4 +1,6 @@
 .motion-drawer {
+    --default-portal-index: 905;
+
     overflow: hidden;
     margin: 0 auto;
 
@@ -11,6 +13,9 @@
     display: flex;
     align-items: center;
     justify-content: center;
+
+    z-index: var(--dialog-portal-index, var(--default-portal-index));
+
 }
 
 .motion-mask-wrapper {
